# dasm8086

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: arena.c.6DA30E79A33A7EE4.idx  arena.h.BE947734D0906BC1.idx  debug.h.1AE47CE68E3318D6.idx  defs.h.69ACDADE13F716B7.idx  dsaString.h.BCB3E4555CC38D7B.idx  instruction.c.99CA6678D94BDCBD.idx  instruction.h.6E95F214950BAC9A.idx  instructionList.c.FE1E7008214382E8.idx  instructionList.h.5D1AA12ECD48B979.idx  main.c.C3955669366DEEDE.idx
include/: debug.h  defs.h  encodings.h  instruction.h  instructionList.h
src/: instruction.c  instructionList.c  main.c
